--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,5 +1,9 @@
 # API Configuration
-VITE_API_URL=http://localhost:5000/api
+# For Vercel deployment, set this to your backend URL
+VITE_API_URL=https://your-backend-url.com/api
+
+# For local development
+# VITE_API_URL=http://localhost:5000/api
 
 # App Configuration (optional)
 VITE_APP_NAME=Invoice Generator Pro
@@ -7,4 +11,9 @@ VITE_APP_VERSION=1.0.0
 
 # Feature Flags (optional)
 VITE_ENABLE_ANALYTICS=false
-VITE_ENABLE_DEBUG_MODE=false 
+VITE_ENABLE_DEBUG_MODE=false
+
+# Vercel-specific configurations
+# These are automatically handled by Vercel
+# VERCEL_URL=https://your-app.vercel.app
+# VERCEL_ENV=production 
