fix: resolve Render root directory deployment issue

--- a/render-simple.yaml
+++ b/render-simple.yaml
@@ -10,9 +10,8 @@ services:
     name: invoice-backend
     env: node
     plan: free
-    rootDir: backend
-    buildCommand: npm install
-    startCommand: npm start
+    buildCommand: cd backend && npm install
+    startCommand: cd backend && npm start
     envVars:
       - key: NODE_ENV
         value: production
@@ -32,9 +31,8 @@ services:
     name: invoice-frontend
     env: static
     plan: free
-    rootDir: frontend
-    buildCommand: npm install && npm run build
-    staticPublishPath: dist
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: frontend/dist
     envVars:
       - key: VITE_API_URL
         value: https://invoice-backend.onrender.com/api
