--- a/backend/env.example
+++ b/backend/env.example
@@ -1,15 +1,15 @@
 # Database Configuration
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/invoice-app?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/invoice-app?retryWrites=true&w=majority
 
 # JWT Configuration
 JWT_SECRET=your_super_secure_jwt_secret_key_here_make_it_long_and_random
 
 # Server Configuration
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 
-# CORS Configuration (optional)
-FRONTEND_URL=http://localhost:3000
+# CORS Configuration
+FRONTEND_URL=https://invoice-frontend.onrender.com
 
 # File Upload Configuration (optional)
 MAX_FILE_SIZE=5242880
