--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,9 +1,9 @@
 # API Configuration
-# For Vercel deployment, set this to your backend URL
-VITE_API_URL=https://your-backend-url.com/api
+# For Render deployment, set this to your backend URL
+VITE_API_BASE_URL=https://your-backend-url.onrender.com/api
 
 # For local development
-# VITE_API_URL=http://localhost:5000/api
+# VITE_API_BASE_URL=http://localhost:5000/api
 
 # App Configuration (optional)
 VITE_APP_NAME=Invoice Generator Pro
