fix: support both MONGO_URI and MONGODB_URI environment variables

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,5 +1,7 @@
 # Database Configuration
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/invoice-app?retryWrites=true&w=majority
+# Use either MONGO_URI or MONGODB_URI (both work)
+MONGO_URI=mongodb+srv://invoice-user:your_password@cluster.mongodb.net/invoice-app?retryWrites=true&w=majority
+# MONGODB_URI=mongodb+srv://invoice-user:your_password@cluster.mongodb.net/invoice-app?retryWrites=true&w=majority
 
 # JWT Configuration
 JWT_SECRET=your_super_secure_jwt_secret_key_here_make_it_long_and_random
